Closed
Bug 286525
Opened 21 years ago
Closed 21 years ago
Installing / updating a theme creates a copy of the jar in the chrome directory
Categories
(Toolkit :: Add-ons Manager, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)
Details
Attachments
(1 file, 2 obsolete files)
|
2.02 KB,
patch
|
benjamin
:
review+
asa
:
approval-aviary1.1a1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050316 Firefox/1.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050316 Firefox/1.0+
When installing a theme for the first time or updating an existing theme a copy
of the theme's jar file is placed in the profile's chrome directory. When there
is already a file with the same name located there a -# is appended to the file
name (e.g. theme-2.jar) which will then cause updates to themes to create a
second jar file in the theme's chrome directory instead of replacing the
existing jar file. This is a spin off of bug 251026.
Reproducible: Always
Steps to Reproduce:
1. install or update a theme
Actual Results:
There is a copy of the jar file for the theme in the profile's chrome directory.
Expected Results:
No extra jar files hanging around
Just like Bug 271220 ?
| Assignee | ||
Comment 2•21 years ago
|
||
(In reply to comment #1)
> Just like Bug 271220 ?
Actually no, that bug describes a problem that existed with the EM code prior to
the recent EM landing where upgrading a theme would leave multiple theme jar
files in the theme's chrome directory and I am pretty sure that bug 271220 is
fixed by the EM landing. What this describes is the theme's jar file being
copied into the profile's chrome directory.
| Assignee | ||
Comment 3•21 years ago
|
||
Dan - This is a simple one liner. This patch moves the closing of the zip
reader to before the zip file is deleted. This is located in #ifdef MOZ_XUL_APP
so it should not affect seamonkey.
requesting rs
| Assignee | ||
Comment 4•21 years ago
|
||
Nominating due to this being a simple fix and without this patch there are
issues with the new chrome.manifest files since this bug causes the jar filename
to change.
Flags: blocking-aviary1.1?
| Assignee | ||
Comment 5•21 years ago
|
||
Comment on attachment 182070 [details] [diff] [review]
simple patch
I found a second issue that looks like it will require a modification to this
same code so I am clearing review. I should be done within the next day with an
updated patch
Attachment #182070 -
Attachment is obsolete: true
Attachment #182070 -
Flags: review?(dveditz)
| Assignee | ||
Comment 6•21 years ago
|
||
This patch moves the closing of the zip reader to before the zip file is
deleted and adds a param to nsIExtensionManager::installItemFromFile that bug
292506 will need. This change is located in an #ifdef MOZ_XUL_APP so it should
not affect seamonkey. This would need to be landed with the patch from bug
292506.
Attachment #182312 -
Flags: review?(dveditz)
| Assignee | ||
Updated•21 years ago
|
Attachment #182312 -
Attachment is obsolete: true
Attachment #182312 -
Flags: review?(dveditz)
| Assignee | ||
Comment 7•21 years ago
|
||
Attachment #182813 -
Flags: review?(benjamin)
Updated•21 years ago
|
Attachment #182813 -
Flags: review?(benjamin)
Attachment #182813 -
Flags: review+
Attachment #182813 -
Flags: approval-aviary1.1a?
Updated•21 years ago
|
QA Contact: bugs → benjamin
Comment 8•21 years ago
|
||
Comment on attachment 182813 [details] [diff] [review]
patch
a=asa
Attachment #182813 -
Flags: approval-aviary1.1a? → approval-aviary1.1a+
| Assignee | ||
Comment 9•21 years ago
|
||
checked in - thanks timelyx - resolved fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•21 years ago
|
Flags: blocking-aviary1.1?
Updated•18 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•