Bug 286525 Installing / updating a theme creates a copy of the jar in the chrome directory patch by moz_bugzilla@exchangecode.com r=bsmedberg a=asa